  https://github.com/mtigas/iObfs

* Bridge user interface overhaul: Onion Browser now comes with the same default
  bridges for obfs4, meek-amazon, and meek-azure, as the Tor Browser Bundle and
  Orbot. An easier-to-use bridge page allows users to select the defaults with
  "one click" and without having to manually edit bridge config lines.

* Tor updated to 0.2.8.5-rc.
  https://gitweb.torproject.org/tor.git/tree/ChangeLog?h=tor-0.2.8.5-rc

* OpenSSL updated to 1.0.2h.
  https://www.openssl.org/news/secadv/20160503.txt
  https://openssl.org/news/changelog.html

? Minimum required iOS version is now iOS 8.2 (was iOS 8.0). Support for iOS
  8.X will continue until Onion Browser 2.0 is released.

CURRENT VERSION:

===== 1.5.16 - In App Store =====
Dec 29 2015 - Submit Date
Jan 07 2016 - App Store Availability

* Tor updated to 0.2.7.6.
  https://gitweb.torproject.org/tor.git/tree/ChangeLog?h=tor-0.2.7.6


PREVIOUS VERSIONS:

===== 1.5.15 =====
Dec 03 2015 - Submit Date
Dec 10 2015 - App Store Availability

* Tor updated to 0.2.7.5, the first stable release in the new
  Tor 0.2.7 series.
  https://gitweb.torproject.org/tor.git/tree/ChangeLog?h=tor-0.2.7.5

* OpenSSL updated to 1.0.2e, fixing several security issues.
  https://openssl.org/news/secadv/20151203.txt
  https://openssl.org/news/changelog.html

===== 1.5.14 =====
Oct 31 2015 - Submit Date
Nov 08 2015 - App Store Availability

* FIX: Crash when pressing menu button on iPad.

* FIX: GREATLY improve the Onion Browser experience when coming back from
  background. Despite my best efforts to fix the problem, there was a minor
  code bug regarding "appDidBecomeActive" that went unnoticed for a very
  long time. BIG thanks to RustamDz who pointed out the relevant code
  error. (#2 #59)

* Tor updated to 0.2.7.4-rc. This future-proofs Onion Browser a bit
  by supporting stronger Ed25519 encryption keys. The 0.2.7 series also
  improves recovery when the clock jumps -- which likely also improves